# ylikuutio

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README  README.md  android.cmake  appveyor.yml  compile_coverity_scan_build  compile_linux_clang  compile_linux_gcc  convert_to_ogg  create_ctags  crosscompile_from_linux_to_android_gcc  crosscompile_from_linux_to_windows_gcc  crosscompile_glew_for_windows  debug_linux_clang  debug_linux_gcc  remove_build_tests  sonar-project.properties  tee.txt  test_all  test_clang_build  test_gcc_build  test_gcc_crosscompile_build_from_linux_to_windows  todo.md  todo.txt  versions.txt  w64.cmake
.github/workflows/: codeql-analysis.yml  github_actions.yml  sonarqube-analysis.yml
bugit/: bug_0001_2016_02_07_ajokki_segmentation_fault.txt  fixed_bugs.txt
code/ajokki/: ajokki.cpp  ajokki.hpp  ajokki_altiplano_scene.cpp  ajokki_altiplano_scene.hpp  ajokki_background_colors.cpp  ajokki_background_colors.hpp  ajokki_callbacks.cpp  ajokki_callbacks.hpp  ajokki_cleanup_callbacks.cpp  ajokki_cleanup_callbacks.hpp  ajokki_console.cpp  ajokki_console.hpp  ajokki_console_callbacks.cpp  ajokki_console_callbacks.hpp  ajokki_debug.cpp  ajokki_debug.hpp  ajokki_earth_ecosystem.cpp  ajokki_earth_ecosystem.hpp  ajokki_helsinki_east_downtown_scene.cpp  ajokki_helsinki_east_downtown_scene.hpp  ajokki_joensuu_center_west_scene.cpp  ajokki_joensuu_center_west_scene.hpp  ajokki_keyboard_callbacks.cpp  ajokki_keyboard_callbacks.hpp  ajokki_location_and_orientation.cpp  ajokki_location_and_orientation.hpp  ajokki_movement.cpp  ajokki_movement.hpp  ajokki_tallinn_scene.cpp  ajokki_tallinn_scene.hpp  ajokki_wireframe.cpp  ajokki_wireframe.hpp  gdal_configure.txt  gdal_make.txt  notes.txt  ohjeet.txt
code/angelscript/: angelscript_test.cpp  hello_world.angel
code/app/: app_background_colors.cpp  app_background_colors.hpp  app_brain.cpp  app_brain.hpp  app_console.cpp  app_console.hpp  app_console_callbacks.cpp  app_console_callbacks.hpp  app_debug.cpp  app_debug.hpp  app_framebuffer.cpp  app_framebuffer.hpp  app_keyboard_callbacks.cpp  app_keyboard_callbacks.hpp  app_location_and_orientation.cpp  app_location_and_orientation.hpp  app_movement.cpp  app_movement.hpp  app_window.cpp  app_window.hpp  app_wireframe.cpp  app_wireframe.hpp
code/asio/: asio_chat_client.cpp  asio_chat_server.cpp  asio_nslookup.cpp
code/avaruus/: constants.f90  my_kind.f90  parser.f90  physics.f90  planetary_system.f90  string.f90
code/awk/: generate_source_list_from_make_output.awk
code/bash/: add_agpl_license  add_gpl_license  create_issues  create_labels  export_blend_into_fbx  labels.md  print_float_results_of_width_32  print_integer_results_of_width_32  print_results_of_width_32  show_blend_textures_internal_renderer
code/chibi-scheme/: chibi_test.cpp
code/convert/: yli_convert.cpp
code/edit/: yli_edit.cpp  yli_edit.hpp  yli_edit_console_callbacks.cpp  yli_edit_console_callbacks.hpp
code/gpgpu_test/: gpgpu_test.cpp  gpgpu_test.hpp  gpgpu_test_scene.cpp  gpgpu_test_scene.hpp
code/hirvi/: cat.cpp  cat.hpp  datatype.hpp  elk.cpp  elk.hpp  emancipation_module.cpp  emancipation_module.hpp  hirvi.cpp  hirvi.hpp  hirvi_console_callbacks.cpp  hirvi_console_callbacks.hpp  hirvi_earth_ecosystem.cpp  hirvi_earth_ecosystem.hpp  hirvi_edit.cpp  hirvi_edit.hpp  hirvi_helsinki_east_downtown_scene.cpp  hirvi_helsinki_east_downtown_scene.hpp  police_car.cpp  police_car.hpp  police_dog.cpp  police_dog.hpp  police_helicopter.cpp  police_helicopter.hpp  police_horse.cpp  police_horse.hpp  police_module.cpp  police_module.hpp  police_train.cpp  police_train.hpp  police_tram.cpp  police_tram.hpp  train.cpp  train.hpp
code/mock/: mock_application.cpp  mock_application.hpp
code/perl/: build_until_success
code/python/: create_yli_ontology_class.py  export_blend_into_fbx.py  show_blend_textures_internal_renderer.py
code/s7/: s7_test.cpp
code/thread_test/: dining_philosophers.cpp  future_test.cpp  thread_test.cpp
code/tinyscheme/: hello_world.scm  tinyscheme_test.cpp
code/tools/: yli_convert.cpp
code/tulevaisuus/: tulevaisuus.cpp  tulevaisuus.hpp  tulevaisuus_console_callbacks.cpp  tulevaisuus_console_callbacks.hpp
common/: Object.cpp  Object.hpp  Species.cpp  Species.hpp  bmploader.cpp  bmploader.hpp  controls.cpp  controls.hpp  globals.cpp  globals.hpp  heightmap_loader.cpp  heightmap_loader.hpp  model.cpp  model.hpp  objloader.cpp  objloader.hpp  quaternion_utils.cpp  shader.cpp  text2D.cpp  text2D.hpp  text3D.cpp  text3D.hpp  texture.cpp  texture.hpp  vboindexer.cpp  vboindexer.hpp  world_generation.cpp
container-build/: Dockerfile  README.md  run-builder.sh
cpp/ajokki/: ajokki.cpp  ajokki_callbacks.cpp  ajokki_callbacks.hpp  ajokki_magic_numbers.hpp  ohjeet.txt
cpp/callback/: callback_engine.cpp  callback_engine.hpp  callback_object.cpp  callback_object.hpp  callback_parameter.cpp  callback_parameter.hpp
cpp/common/: any_value.hpp  font.cpp  (+62 more)
cube_with_colors/: cube_with_colors  cube_with_colors.cpp
doc/: blender_notes.txt  blendswap.txt  class_diagram.tex  coding_guidelines.txt  console_functionality.md  console_functionality.txt  freesound.txt  gimp_notes.txt  graphics_testing.txt  heightmaps.txt  labels.md  manual.txt  mesh_graphs.txt  notes.txt  ontology.md  opengl.txt  roof_data.txt  spatial_data.txt  terrain_data.txt  vulkan.txt  yli_file_format.txt  ylikuutio_design.txt  ylilisp.txt
model_loading/: StandardShading.fragmentshader  TextureFragmentShader.fragmentshader  model_loading.cpp  ohjeet.txt
plans/: kattodata.txt
res/: S17W069.hgt
run/: README
satellite_imagery/: download_SRTM_South_America_version_SRTMGL3
several_objects/: several_objects.cpp
src/: Makefile  README  constants.f90  file.f90  global_parameters.f90  object.f90  parser.f90  physics.f90  planetary_motion.f90  planetary_system.f90  process_output_file_solar_system  string.f90  verlet_integration.f90  visualize_planetary_motion
text2d/: TextVertexShader.vertexshader  tutorial11.cpp  tutorial11_2d_fonts
ylikuutio/: StandardShading.vertexshader  ohjeet.txt  ylikuutio.cpp
(+1506 files in other folders)
